<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_videocam_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_eBook"
        android:icon="@drawable/ic_picture_as_pdf_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_Test"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_test" />

   <item
        android:id="@+id/navigation_Download"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        android:title="@string/title_download" />



</menu>
